# brainlattice

./: .gitignore  DEVPOST.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  output_graph.json  pyproject.toml  requirements.txt  run.sh  serverless.yml  test_clean.py  test_pipeline.py
backend/core/: config.py  dependencies.py  logger.py
backend/db/: models.py  session.py
backend/handlers/: lambda_handler.py
backend/migrations/: 001_initial_schema.sql  002_add_graph_nodes.sql  003_add_user_id.sql  004_change_user_id_to_string.sql  005_add_project_metadata.sql  006_add_hnsw_index.sql
backend/models/: api.py  concept_insights.py  graph.py  pdf.py
backend/prompts/: chunk_extraction.jinja  concept_validation.jinja  global_seed.jinja  global_seed_header.jinja  graph_extraction.jinja  node_note.jinja  orphan_link_completion.jinja  paginated_graph_extraction.jinja  skeleton_extraction.jinja
backend/routers/: audio.py  audio_script.py  concept_insights.py  digest.py  export.py  extract.py  ingest.py  internal.py  overview.py  project.py  relationships.py  stats.py  structure.py
backend/schemas/: graph.py  ingest.py  project.py
backend/scripts/: clear_gemini_caches.py  extract_graph.py  parse_pdf.py  test_graph.py  test_local_pipeline.py
backend/services/: ai_service.py  chunking_service.py  db_service.py  embedding_service.py  export_processor.py  graph_service.py  ingestion_orchestrator.py  ingestion_processor.py  job_service.py  pdf_service.py  queue_service.py  storage_service.py  task_orchestrator.py
backend/services/graph/: builder.py  connector.py  metrics.py  node_filter.py  persistence_service.py  resolver.py
backend/services/llm/: audio_generator.py  cache_service.py  chunk_extractor.py  concept_validator.py  (+11 more)
backend/tests/: test_graph_integrity.py  test_pipeline.py
(+86 files in other folders)
