[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "firebase-admin>=6.2.0",
    "fish-audio-sdk>=1.2.0",
    "google-genai>=1.63.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pymupdf4llm>=0.3.4",
    "pypdf>=6.7.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:.*importlib._bootstrap",
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]
